--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@blueprintjs/core": "^5.2.0",
     "ahooks": "^3.7.8",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
